# dev-py-iam-gateway

./: Dockerfile  README.md  pyproject.toml  run.py
app/: main.py  middleware.py
app/api/: signup_api.py
app/api/iam/: signin_api.py  signup_api.py
app/api/v1/endpoints/: gateway_iam_controller.py  signup_api.py
app/client/oidc_gateway_service/: oidc_idp_schema_response.py  oidc_internal_schema_response.py  oidc_paths.py  oidc_schema_request.py  oidc_service_client.py
app/client/oidc_gateway_service/schemas/: authorization_code_response_schema.py  oidc_signin_request_schema.py  oidc_token_internal_schema.py
app/client/signup_core_service/: signup_core_request_schema.py  signup_core_service_client.py
app/component/: session_context.py
app/core/: cookies_config.py  enviroment_config.py  environment_config.py  exceptions.py  exceptions_handlers.py  i18n_instance.py  iam_constants.py  jwt_config.py  settings_config.py
app/core/cache/: base.py  factory_cache.py  in_memory.py  redis_cache.py
app/dto/: authorize_url_dto.py  cookie_dto.py  jwt_dto.py  keys_dto.py  oidc_pkce_dto.py  oidc_signin_init_dto.py  session_dto.py  signin_init_dto.py  signup_dto.py
app/model/: prelogin_model.py  session_model.py
app/schemas/: signup_schema_response.py
app/schemas/signin_schemas/: signin_init_response_schema.py
app/schemas/signup_schemas/: signupsubmit_schema_request.py
app/service/: signup_init_service.py  signup_service.py  signup_submit_service.py
app/service/impl/: signup_init_service_impl.py  signup_service_impl.py  signup_submit_service_impl.py
app/services/iam/signin_services/: signin_callback_service_impl.py  signin_prelogin_service_impl.py  signin_service.py
app/utils/: authorize_helper.py  generate_codes_helper.py  validate_token.py
resources/: env_dev.yaml  env_local.yaml  message.json
resources/certs/: public_key_local.pem
(+2 files in other folders)
