[project]
name = "dev-py-iam-gateway"
version = "0.1.0"
description = ""
authors = [
    {name = "ricardomarzochi07",email = "ricardomarzochi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "buddybet-logmon-common (>=0.1.0,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
